fix issue with the background color of the elements behind the top-section-title. Used absolute positioning to fix it. Applied grayscale coloring to navbar and top-section

--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -2,8 +2,8 @@
   --gray1: rgb(200, 200, 200);
   --gray2: rgb(160, 160, 160);
   --gray3: rgb(120, 120, 120);
-  --gray4: rgb(80, 80, 80);
-  --gray5: rgb(40, 40, 40);
+  --gray4: rgb(60, 60, 60);
+  --gray5: rgb(30, 30, 30);
 }
 
 /*
@@ -69,7 +69,7 @@ ul {
 
 .header {
   padding: 0 2em;
-  background-color: #d33a2c;
+  background-color: var(--gray4);
   color: white;
   font-family: "Nunito", sans-serif;
   justify-content: space-between;
@@ -154,16 +154,18 @@ ul {
 */
 
 .top-section {
-  background-color: #bc3428;
+  background-color: var(--gray4);
   color: white;
   display: grid;
   grid-template-columns: repeat(2, 50%);
+  position: relative;
 }
 
 .top-section-header {
-  grid-column: 1 / -1;
   justify-content: center;
-  position: relative;
+  position: absolute;
+  width: 100%;
+  z-index: 10;
 }
 
 .main-title {
@@ -175,7 +177,7 @@ ul {
   flex-direction: column;
 }
 
-.main-title > * {
+.main-title>* {
   background-color: white;
   padding: 0.15em 0.35em 0.35em;
   font-size: 2.4em;
@@ -300,6 +302,25 @@ ul {
   bottom: 40px;
 }
 
+.top-section article:nth-of-type(1) {
+  background-color: rgba(00, 00, 00, 0.20);
+  padding-top: 180px;
+}
+
+.top-section article:nth-of-type(2) {
+  background-color: rgba(00, 00, 00, 0.05);
+  padding-top: 180px;
+}
+
+.top-section article:nth-of-type(4) {
+  background-color: rgba(00, 00, 00, 0.20);
+}
+
+.top-section article:nth-of-type(3) {
+  background-color: rgba(00, 00, 00, 0.30);
+}
+
+
 /*
   =======================
   Aside Section
@@ -311,6 +332,8 @@ ul {
   color: white;
   font-size: 1.1em;
   line-height: 35px;
+  position: relative;
+  z-index: 20;
 }
 
 .aside-info-wrapper {
@@ -378,7 +401,7 @@ ul {
   justify-items: start;
 }
 
-.g-wrapper > * {
+.g-wrapper>* {
   margin: 0;
   padding-left: 20px;
 }
@@ -692,7 +715,7 @@ ul {
   font-size: 1em;
 }
 
-.featured a > img {
+.featured a>img {
   width: 250px;
   transform: rotate(-15deg);
   margin-right: 150px;
@@ -840,7 +863,7 @@ ul {
   margin-bottom: 1em;
 }
 
-.footer > p {
+.footer>p {
   font-size: 0.8em;
   line-height: 2em;
 }
@@ -857,8 +880,8 @@ ul {
   text-decoration: underline;
 }
 
-.nav-footer-items > li > a,
-.topic-links > li > a {
+.nav-footer-items>li>a,
+.topic-links>li>a {
   color: white;
 }
 
